--- a/test/fixtures/candles.yml
+++ b/test/fixtures/candles.yml
@@ -2,24 +2,22 @@
 
 one:
   candlestick: one
-  start_stamp: 2022-06-05 17:26:51
+  candleable: one
+  candleable_type: Candleable
+  start_stamp: 1
   open: 9.99
-  close: 9.99
-  low: 9.99
   high: 9.99
-  amount_bought: 9.99
-  amount_sold: 9.99
-  buys: 1
-  sales: 1
+  low: 9.99
+  close: 9.99
+  volume: 9.99
 
 two:
   candlestick: two
-  start_stamp: 2022-06-05 17:26:51
+  candleable: two
+  candleable_type: Candleable
+  start_stamp: 1
   open: 9.99
-  close: 9.99
-  low: 9.99
   high: 9.99
-  amount_bought: 9.99
-  amount_sold: 9.99
-  buys: 1
-  sales: 1
+  low: 9.99
+  close: 9.99
+  volume: 9.99
